# blockscout-rs

./: .env  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  RUST_CODE_STYLE_GUIDE.md  docker-compose.yaml  dockerfile  rust-toolchain
basic-cache/basic-cache-logic/: Cargo.toml
basic-cache/basic-cache-proto/: Cargo.toml  build.rs
basic-cache/basic-cache-server/: Cargo.toml
blockscout-ens/: .dockerignore  .env.dev  .gitignore  Cargo.toml  Dockerfile  README.md  extract_addresses_and_query.py  justfile
blockscout-ens/bens-logic/: Cargo.toml  justfile
blockscout-ens/bens-proto/: Cargo.toml  build.rs  convert-swagger-v2-to-v3.py
blockscout-ens/bens-server/: .gitignore  Cargo.toml  README.md
blockscout-ens/ens-node/: docker-compose-devops.yml  docker-compose.yml
blockscout-ens/graph-node/: .gitignore  README.md  config.toml  docker-compose.yml  gn-config.toml  rainbow.sh  rainbow.small.sh
blockscout-ens/types/: .gitignore  index.ts  package-lock.json  package.json
blockscout-smart-contracts/blockscout-smart-contracts-logic/: Cargo.toml
blockscout-smart-contracts/blockscout-smart-contracts-migration/: Cargo.toml
da-indexer/: .dockerignore  Cargo.toml  Dockerfile  README.md  data-s3-migrator.dockerfile  docker-compose.yml  justfile
da-indexer/da-indexer-entity/: Cargo.toml
da-indexer/da-indexer-logic/: Cargo.toml  build.rs
da-indexer/da-indexer-migration/: Cargo.toml
da-indexer/da-indexer-proto/: Cargo.toml  build.rs
da-indexer/da-indexer-scripts/: Cargo.toml
da-indexer/da-indexer-server/: Cargo.toml
eth-bytecode-db/: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
eth-bytecode-db-extractors/: Cargo.toml
eth-bytecode-db-extractors/alliance/: Cargo.toml
eth-bytecode-db-extractors/alliance-entity/: Cargo.toml
eth-bytecode-db-extractors/alliance-migration/: Cargo.toml
eth-bytecode-db-extractors/blockscout/: .gitignore  Cargo.toml
eth-bytecode-db-extractors/blockscout-entity/: Cargo.toml
eth-bytecode-db-extractors/blockscout-migration/: Cargo.toml
eth-bytecode-db-extractors/contracts-lookup/: Cargo.toml
eth-bytecode-db-extractors/contracts-lookup-entity/: Cargo.toml
eth-bytecode-db-extractors/contracts-lookup-migration/: Cargo.toml
eth-bytecode-db-extractors/eth-bytecode-db-entity/: Cargo.toml
eth-bytecode-db-extractors/explorer/: Cargo.toml
eth-bytecode-db-extractors/explorer-entity/: Cargo.toml
eth-bytecode-db-extractors/explorer-migration/: Cargo.toml
eth-bytecode-db-extractors/job-queue/: Cargo.toml
eth-bytecode-db-extractors/smart-contract-fiesta/: Cargo.toml
eth-bytecode-db-extractors/smart-contract-fiesta-entity/: Cargo.toml
eth-bytecode-db-extractors/smart-contract-fiesta-migration/: Cargo.toml
eth-bytecode-db/eth-bytecode-db/: Cargo.toml  README.md  justfile
eth-bytecode-db/eth-bytecode-db-proto/: Cargo.toml  build.rs
eth-bytecode-db/eth-bytecode-db-server/: Cargo.toml  Dockerfile  docker-compose.yml
eth-bytecode-db/extractors/: Cargo.toml  a.json  justfile
eth-bytecode-db/extractors-entity/: Cargo.toml
eth-bytecode-db/extractors-migration/: Cargo.toml
eth-bytecode-db/sourcify-search/: Cargo.toml
eth-bytecode-db/verifier-alliance-database/: Cargo.toml
eth-bytecode-db/verifier-alliance-database-tests/: Cargo.toml
interchain-indexer/: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  justfile
interchain-indexer/.claude/: CLAUDE.md
interchain-indexer/.cursor/: rules
interchain-indexer/.memory-bank/: README.md  architecture.md  codebase-review.md  exploration-map.md  glossary.md  gotchas.md  project-context.md
interchain-indexer/docker/: .env.example  .gitignore  Caddyfile  README.md  docker-compose-full.yml  docker-compose-ubi.yml  docker-compose.yml
interchain-indexer/interchain-indexer-entity/: Cargo.toml
interchain-indexer/interchain-indexer-logic/: Cargo.toml
interchain-indexer/interchain-indexer-migration/: Cargo.toml
interchain-indexer/interchain-indexer-proto/: Cargo.toml  build.rs
interchain-indexer/interchain-indexer-server/: Cargo.toml
interchain-indexer/scripts/: bigdecimal_rename.sh  update_migration.sh
interchain-indexer/types/: .gitignore  index.ts  package-lock.json  package.json
libs/: Cargo.toml
libs/actix-phoenix-channel/: Cargo.toml
libs/api-client-framework/: Cargo.toml
libs/blockscout-auth/: Cargo.toml
libs/blockscout-chains/: Cargo.toml
libs/blockscout-client/: Cargo.toml  README.md  convert_mustache2handlebars.sh  justfile  openapi-generator-config.json  openapi-merge.json  package.json  swagger_v2.yaml  tsconfig.json
libs/blockscout-db/: Cargo.toml  justfile
libs/blockscout-display-bytes/: Cargo.toml
libs/blockscout-health/: Cargo.toml
libs/blockscout-service-health/: Cargo.toml  build.rs
libs/mismatch/: Cargo.toml
multichain-aggregator/: Cargo.toml  Dockerfile  README.md  docker-compose.yml  justfile
multichain-api-gateway/: Cargo.toml  Dockerfile  docker-compose.yaml  example_config.toml
proxy-verifier/: Cargo.toml  Dockerfile  README.md  justfile
service-template/: Cargo.toml  Dockerfile  README-template.md  README.md  _Cargo.toml  cargo-generate.toml  justfile  pre-script.rhai
sig-provider/: Cargo.toml  Dockerfile  README.md  build.rs
smart-contract-service/: Cargo.toml  README.md  build.rs
smart-contract-verifier/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile_old  README.md  docker-compose.yaml  docker-compose.yml
smart-contract-verifier-http/: Cargo.toml  Dockerfile  README.md  docker-compose.yaml
sol_to_uml/: Cargo.toml  Dockerfile  docker-compose.yml  example_config.toml
stats/: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose-multichain.dev.yml  docker-compose.dev.yml  justfile
stylus-verifier/: Cargo.toml  Dockerfile  README.md  justfile
tac-operation-lifecycle/: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  justfile
verification/: Cargo.toml  Dockerfile  README.md  configuration.toml  docker-compose.yaml  dockerfile  example_config.toml
(+4102 files in other folders)
