[workspace]
resolver = "2"
members = [
    "eth-bytecode-db",
    "eth-bytecode-db-proto",
    "eth-bytecode-db-server",
    "eth-bytecode-db/entity",
    "eth-bytecode-db/migration",
    "eth-bytecode-db/verifier-alliance-entity",
    "eth-bytecode-db/verifier-alliance-migration",
]

[workspace.dependencies]
entity = { path = "eth-bytecode-db/entity" }
eth-bytecode-db = { path = "eth-bytecode-db" }
eth-bytecode-db-proto = { path = "eth-bytecode-db-proto" }
eth-bytecode-db-server = { path = "eth-bytecode-db-server" }
migration = { path = "eth-bytecode-db/migration" }
verifier-alliance-entity = { path = "eth-bytecode-db/verifier-alliance-entity" }
verifier-alliance-migration = { path = "eth-bytecode-db/verifier-alliance-migration" }

actix-prost = { git = "https://github.com/blockscout/actix-prost", rev = "4cbba2a" }
actix-prost-macros = { git = "https://github.com/blockscout/actix-prost", rev = "4cbba2a" }
actix-prost-build = { git = "https://github.com/blockscout/actix-prost", rev = "4cbba2a" }
actix-web = { version = "4" }
alloy-json-abi = { git = "https://github.com/alloy-rs/core", rev = "398d7e2" }
amplify = { version = "3.13.0" }
anyhow = { version = "1" }
async-std = { version = "^1" }
async-trait = { version = "0.1" }
blockscout-display-bytes = { version = "1.0" }
blockscout-service-launcher = { version = "0.14.0" }
bytes = { version = "1.2" }
ethabi = { version = "18.0" }
ethers = { version = "2.0.0" }
ethers-core = { version = "2.0.0" }
foundry-compilers = { version = "0.3.13" }
futures = { version = "0.3" }
hex = { version = "0.4" }
keccak-hash = { version = "0.10.0" }
lazy_static = { version = "1" }
mismatch = { version = "1.0" }
mockall = { version = "0.12" }
paste = { version = "1.0.14" }
pretty_assertions = { version = "1.3" }
prometheus = { version = "0.13" }
prost = { version = "0.11" }
prost-build = { version = "0.11" }
reqwest = { version = "0.11" }
reqwest-middleware = { version = "0.2" }
reqwest-retry = { version = "0.3" }
rstest = { version = "0.18.0" }
sea-orm = { version = "0.12.2" }
sea-orm-migration = { version = "0.12.2" }
semver = { version = "1.0" }
serde = { version = "1" }
serde_json = { version = "1.0" }
serde_with = { version = "2.0" }
smart-contract-verifier-proto = { git = "https://github.com/blockscout/blockscout-rs", rev = "7a6e9400" }
solidity-metadata = { version = "1.0" }
sourcify = { git = "https://github.com/blockscout/blockscout-rs", rev = "457af68" }
thiserror = { version = "1" }
tokio = { version = "1" }
tokio-stream = { version = "0.1" }
tonic = { version = "0.8" }
tonic-build = { version = "0.8" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
url = { version = "2" }
verification-common = { git = "https://github.com/blockscout/blockscout-rs", rev = "7a6e9400" }