[workspace]
resolver = "3"
members = [
    "interchain-indexer-entity",
    "interchain-indexer-logic",
    "interchain-indexer-migration",
    "interchain-indexer-proto",
    "interchain-indexer-server",
]

[workspace.dependencies]
interchain-indexer-entity = { path = "./interchain-indexer-entity" }
interchain-indexer-logic = { path = "./interchain-indexer-logic" }
interchain-indexer-migration = { path = "./interchain-indexer-migration" }
interchain-indexer-proto = { path = "./interchain-indexer-proto" }

blockscout-service-launcher = { version = "0.20.0" }
sea-orm = { version = "1.1.14", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "postgres-array"] }
sea-orm-migration = { version = "1.1.14", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
alloy = { version = "1.0", features = ["default"] }
async-std = { version = "1.12.0" }
actix-web = { version = "4.2" }
anyhow = { version = "1.0" }
async-trait = { version = "0.1" }
config = { version = "0.15" }
governor = { version = "0.10.0" }
serde = { version = "1.0" }
serde_json = { version = "1.0.96" }
futures = { version = "0.3" }
tokio = { version = "1.47", features = ["full"] }
tonic = { version = "0.12", features = ["tls", "tls-roots"] }
tracing = { version = "0.1" }
blockscout-display-bytes = { version = "1.1.0" }
pretty_assertions = { version = "1.3" }
actix-prost = { version = "0.2.0" } 
actix-prost-macros = { version = "0.2.0" }
actix-prost-build = { version = "0.2.0", features = ["conversions"] }
prost = { version = "0.13" }
prost-build = { version = "0.13" }
tonic-build = { version = "0.12" }
serde_with = { version = "3.6.1" }
reqwest = { version = "0.12.5", features = ["json"] }
reqwest-middleware = { version = "0.3.3" }
reqwest-retry = { version = "0.6.1" }
env-collector = { git = "https://github.com/blockscout/blockscout-rs", version = "0.3.0" }
parking_lot = { version = "0.12" }
prost-wkt-build = { version = "0.6" }
prost-wkt = { version = "0.6.0" }
prost-types = { version = "0.13" }
prost-wkt-types = { version = "0.6.0" }
convert-trait = { package = "actix-prost-convert-trait", version = "0.2.0" }
url = "2.5.4"
thiserror = { version = "2.0.10" }
rstest = { version = "0.26.1" }
