[workspace]
resolver = "3"
members = [
    "interchain-indexer-entity",
    "interchain-indexer-logic",
    "interchain-indexer-migration",
    "interchain-indexer-proto",
    "interchain-indexer-server",
]

[workspace.dependencies]
actix-prost = { version = "0.2.0" }
actix-prost-build = { version = "0.2.0", features = ["conversions"] }
actix-prost-macros = { version = "0.2.0" }
actix-web = { version = "4.2" }
alloy = { version = "1.0", features = ["full", "node-bindings"] }
alloy-json-rpc = { version = "1.0.41" }
anyhow = { version = "1.0" }
async-std = { version = "1.12.0" }
async-trait = { version = "0.1" }
blockscout-display-bytes = { version = "1.1.0" }
blockscout-endpoint-swagger = { git = "https://github.com/blockscout/blockscout-rs", rev = "4a755c5" }
blockscout-service-launcher = { version = "0.20.0" }
chrono = { version = "0.4" }
config = { version = "0.15" }
convert-trait = { package = "actix-prost-convert-trait", version = "0.2.0" }
env-collector = { git = "https://github.com/blockscout/blockscout-rs", version = "0.3.0" }
futures = { version = "0.3" }
governor = { version = "0.10.0" }
hex = { version = "0.4.3" }
interchain-indexer-entity = { path = "./interchain-indexer-entity" }
interchain-indexer-logic = { path = "./interchain-indexer-logic" }
interchain-indexer-migration = { path = "./interchain-indexer-migration" }
interchain-indexer-proto = { path = "./interchain-indexer-proto" }
itertools = { version = "0.14" }
lazy_static = { version = "1.5" }
parking_lot = { version = "0.12" }
pretty_assertions = { version = "1.3" }
prometheus = { version = "0.13" }
prost = { version = "0.13" }
prost-build = { version = "0.13" }
prost-types = { version = "0.13" }
prost-wkt = { version = "0.6.0" }
prost-wkt-build = { version = "0.6" }
prost-wkt-types = { version = "0.6.0" }
rand = { version = "0.9" }
reqwest = { version = "0.12.5", features = ["json"] }
reqwest-middleware = { version = "0.3.3" }
reqwest-retry = { version = "0.6.1" }
rstest = { version = "0.26.1" }

sea-orm = { version = "1.1.14", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "postgres-array",
] }
sea-orm-migration = { version = "1.1.14", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }

serde = { version = "1.0" }
serde_json = { version = "1.0.96" }
serde_with = { version = "3.6.1" }
thiserror = { version = "2.0.10" }
tokio = { version = "1.47", features = ["full"] }
tonic = { version = "0.12", features = ["tls", "tls-roots"] }
tonic-build = { version = "0.12" }
tower = { version = "0.4", features = ["util"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2.5.4"
