[workspace]
resolver = "2"
members = [
    "blockscout-auth",
    "blockscout-client/crate",
    "blockscout-db",
    "blockscout-service-health",
    "blockscout-service-launcher",
    "display-bytes",
    "env-collector",
    "mismatch",
    "reqwest-rate-limiter",
    "solidity-metadata",
    "sourcify",
    "verification-common",
]
