[workspace]
resolver = "2"
members = [
    "blockscout-auth",
    "blockscout-client/crate",
    "blockscout-db",
    "endpoints/swagger",
    "blockscout-service-launcher",
    "display-bytes",
    "env-collector",
    "metrics-tools",
    "mismatch",
    "reqwest-rate-limiter",
    "solidity-metadata",
    "sourcify",
    "verification-common",
]
