[workspace]
resolver = "2"
members = [
    "multichain-aggregator-entity",
    "multichain-aggregator-logic",
    "multichain-aggregator-migration",
    "multichain-aggregator-proto",
    "multichain-aggregator-server",
]

[workspace.dependencies]
multichain-aggregator-entity = { path = "./multichain-aggregator-entity" }
multichain-aggregator-logic = { path = "./multichain-aggregator-logic" }
multichain-aggregator-migration = { path = "./multichain-aggregator-migration" }
multichain-aggregator-proto = { path = "./multichain-aggregator-proto" }
bens-proto = { git = "https://github.com/blockscout/blockscout-rs", rev = "741fc40" }

# web
actix-prost = { version = "0.1.0" }
actix-prost-build = { version = "0.1.0" }
actix-prost-macros = { version = "0.1.0" }
actix-web = "4.2"
blockscout-service-launcher = { version = "0.20.0", features = ["database-1"] }
prost = "0.13"
prost-build = "0.13"
prost-wkt = "0.6.0"
prost-wkt-types = "0.6.0"
prost-wkt-build = "0.6.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tonic = "0.12"
tonic-build = "0.12"

# db
sea-orm = { version = "1.1.7", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
sea-orm-migration = { version = "1.1.7", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }

# serde
serde = { version = "1.0.197", features = ["serde_derive", "derive"] }
serde_json = "1.0.108"
serde_with = { version = "3.9.0", features = ["macros", "json"] }

# tracing
tracing = "0.1"
tracing-subscriber = "0.3.18"

# misc
alloy-primitives = "0.8"
anyhow = "1.0"
api-client-framework = { git = "https://github.com/blockscout/blockscout-rs", rev = "d60c1d8" }
async-std = { version = "1", features = ["attributes", "tokio1"] }
async-trait = "0.1"
blockscout-chains = { git = "https://github.com/blockscout/blockscout-rs", version = "0.2.0" }
cached = { version = "0.55", default-features = false }
config = "0.13"
env-collector = { git = "https://github.com/blockscout/blockscout-rs", version = "0.1.1" }
regex = "1.10"
reqwest = "0.12"
thiserror = "1.0"
url = "2.4"
futures = "0.3"
lazy_static = { version = "1.4" }
prometheus = { version = "0.13" }

# tests
pretty_assertions = "1.3"
wiremock = "0.6.2"
