[workspace]
resolver = "3"
members = [
    "multichain-aggregator-entity",
    "multichain-aggregator-logic",
    "multichain-aggregator-migration",
    "multichain-aggregator-proto",
    "multichain-aggregator-server",
]

[workspace.dependencies]
multichain-aggregator-entity = { path = "./multichain-aggregator-entity" }
multichain-aggregator-logic = { path = "./multichain-aggregator-logic" }
multichain-aggregator-migration = { path = "./multichain-aggregator-migration" }
multichain-aggregator-proto = { path = "./multichain-aggregator-proto" }
bens-proto = { git = "https://github.com/blockscout/blockscout-rs", tag = "bens/v1.6.4" }

# web
actix-phoenix-channel = "0.1.0"
actix-prost = { version = "0.3.0" }
actix-prost-build = { version = "0.3.0" }
actix-prost-macros = { version = "0.3.0" }
actix-web = "4.2"
blockscout-service-launcher = { version = "0.21.0", features = ["database-1"] }
prost = "0.14"
prost-build = "0.14"
prost-wkt = "0.7.0"
prost-wkt-types = "0.7.0"
prost-wkt-build = "0.7.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tonic = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"

# db
sea-orm = { version = "1.1.14", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
sea-orm-migration = { version = "1.1.14", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }

# serde
serde = { version = "1.0.197", features = ["serde_derive", "derive"] }
serde_json = "1.0.108"
serde_with = { version = "3.9.0", features = ["macros", "json"] }

# tracing
tracing = "0.1"
tracing-subscriber = "0.3.18"

# misc
alloy-primitives = "1.4"
amplify = { version = "4", features = ["derive"], default-features = false }
anyhow = "1.0"
api-client-framework = { git = "https://github.com/blockscout/blockscout-rs", rev = "d60c1d8" }
async-std = { version = "1", features = ["attributes", "tokio1"] }
async-trait = "0.1"
base64 = "0.22"
base32ct = "0.3"
bigdecimal = "0.4"
blockscout-chains = { git = "https://github.com/blockscout/blockscout-rs", version = "0.3.0" }
cached = { version = "0.55", default-features = false }
config = "0.15"
chrono = "0.4.38"
env-collector = { git = "https://github.com/blockscout/blockscout-rs", version = "0.3.0" }
itertools = "0.14"
regex = "1.10"
reqwest = "0.12"
rust_decimal = "1.37"
thiserror = "2.0"
url = "2.4"
futures = "0.3"
lazy_static = { version = "1.4" }
prometheus = { version = "0.14" }
recache = { git = "https://github.com/blockscout/blockscout-rs", rev = "096c4c1" }
strum = { version = "0.27", default-features = false, features = ["derive"] }

# tests
pretty_assertions = "1.3"
rstest = "0.26"
wiremock = "0.6.2"
