[package]
name = "multichain-api-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
awc = { version = "3.0.0", features = ["openssl"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
url = { version = "2", features = ["serde"] }
toml = "0.5.9"
clap = { version = "3", features = ["derive"] }
config = "0.13"
anyhow = "1.0"
chrono = { version = "0.4.22", features = ["serde"] }
serde_with = { version = "2.0.0", features = ["chrono_0_4"] }
log = "0.4.17"
env_logger = "0.9.0"
