[package]
name = "multichain-api-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
awc = { version = "3.0.0", features = ["openssl"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
url = { version = "2", features = ["serde"] }
toml = "0.5.9"
config = "0.13"
anyhow = "1.0"
chrono = { version = "0.4.22", features = ["serde"] }
serde_with = { version = "2.0.0", features = ["chrono_0_4"] }
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.6.0"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
opentelemetry = { version = "0.17", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.16", features = ["rt-tokio"] }
tracing-opentelemetry = "0.17"
