[workspace]
resolver = "2"
members = [
    {% if logic -%}
    "{{project-name}}-logic",
    {% endif -%}
    {% if entity -%}
    "{{project-name}}-entity",
    {% endif -%}
    {% if migration -%}
    "{{project-name}}-migration",
    {% endif -%}
    "{{project-name}}-proto",
    "{{project-name}}-server",
]

[workspace.dependencies]
blockscout-service-launcher = "0.10.0"