[workspace]
resolver = "2"
members = [
    "smart-contract-verifier",
    "smart-contract-verifier-proto",
    "smart-contract-verifier-server",
    "sig-provider-extension",
]

[workspace.dependencies]
blockscout-display-bytes = "1.1.0"
blockscout-service-launcher = "0.12.0"
verification-common = { git = "https://github.com/blockscout/blockscout-rs/", rev = "bd6352d" }